--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="leftDirections">왼쪽 방향이 여기에 표시됩니다.</div>
-        <div id="rightDirections">오른쪽 방향이 여기에 표시됩니다.</div>
+        <div id="leftDirections"></div>
+        <div id="rightDirections"></div>
     </div>
     <button id="randomButton">랜덤 방향</button>
 
